# yolo-jail

./: .gitignore  .goreleaser.yaml  AGENTS.md  HANDOFF-credentials-logout-2026-04-28.md  Justfile  LICENSE  NOTICE  README.md  flake.nix  go.mod  go.sum  mise.toml  pyproject.toml  yolo-enter.sh  yolo-jail-runner.skill  yolo-jail.jsonc  yolo-jail.toml  yolo-parity
.github/: dependabot.yml
bundled_loopholes/: embed.go
docs/: DOC_TRIAGE.md  USER_GUIDE.md  agent-briefings.md  claude-oauth-mitm-proxy-plan.md  claude-oauth-refresh-mechanics.md  claude-token-logouts.md  config-safety.md  ctrl-z-and-the-tty-proxy.md  go-port-plan.md  handoff-cachix-cache.md  handoff-jail-logout-fixes.md  handoff-macos-nix-shell-spike.md  handoff-macos-ondemand-builder.md  handoff-macos-user-backend.md  handoff-macos-user-revive-plan.md  handoff-pr-replies.md  happy-path-principle.md  jail-state-separation-design.md  jail-version-predictability.md  kitty-jail.conf  loopholes.md  macos-backend-direction.md  macos-container-builder-exploration.md  macos-linux-builder-explained.md  macos-native-user-sandbox-design.md  macos-nix-shell-backend-proposal.md  macos-no-vm-direction.md  macos-support-matrix.md  macos-user-mode.md  macos-user-review-findings.md  macos-user-sandbox-guarantees.md  macos-user-security-model.md  macos.md  mise-host-jail-path-mismatch.md  modules.md  platform-comparison.md  rocm-gpu-jail-findings.md  rocm-memlock-handoff.md  rocm-passthrough-design.md  rocm-passthrough-handoff.md  (+4 more)
integration/: agents_test.go  cgroup_test.go  cli_test.go  harness_test.go  harnessenv_test.go  (+5 more)
(+836 files in other folders)
