[tool.uv]
package = false

[project]
name = "yolo-jail"
version = "0.0.0"
description = "Secure container jail for AI coding agents"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that spin up containers (skipped during promote)",
]
